--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,7 +65,7 @@ deploy_staging:
     - echo "Deploy to staging server"
     - ssh ws_admin@178.62.11.121
     - cd /srv/weshareashare
-    - sudo git pull
+    - sudo git pull origin development
     - cd server
     - sudo rm -rf node_modules/
     - sudo npm install bcrypt
